@@ -1,0 +1,51 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<html>
+<head>
+
+
+
+  
+  
+  <meta content="text/html; charset=ISO-8859-1" http-equiv="content-type">
+
+
+  
+  
+  <title>mrViewer</title>
+</head>
+
+
+<body>
+
+<br>
+
+
+
+<h2><a name="The_File_Open"></a><span style="text-decoration: underline;">The File Open Menu</span></h2>
+
+
+
+
+
+<br>
+
+
+
+<img alt="file_open.png" src="images/Menus_File_Open.png" hspace="20">
+
+<br>
+<br>
+The File Open menu allows you to open a movie file or a sequence of images.
+<br>
+<br>
+It allows you to load a single image instead of the whole sequence.
+<br>
+<br>
+And it allows to load the Clip XML Metadata for ACES LUT management.
+<br>
+<br>
+
+
+
+</body>
+</html>
