@@ -1,0 +1,43 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<html>
+<head>
+
+
+
+  
+  
+  <meta content="text/html; charset=ISO-8859-1" http-equiv="content-type">
+
+
+  
+  
+  <title>mrViewer</title>
+</head>
+
+
+<body>
+
+<br>
+
+
+
+<h2><a name="The_Windows_Menu"></a><span style="text-decoration: underline;">The Windows Menu</span></h2>
+
+
+
+
+
+<br>
+
+
+
+<img alt="menu_windows.png" src="images/Menus_Windows.png" hspace="20">
+
+<br>
+<br>
+The Windows menu allows you to open all the other utility windows of mrViewer.  It is the same as pushing the <b>W</b> button in the main toolbar.
+
+
+
+</body>
+</html>
