@@ -413,6 +413,20 @@ Window</a></li>
     <li><a target="main" href="connections.html">The Server/Client 
 Connections Window</a></li>
 
+    </ul>
+
+    <li><a target="main" href="menus.html">The Menus</a></li>
+
+    <ul>
+    <li><a target="main" href="menus_open.html">File Open</a></li>
+    <li><a target="main" href="menus_save.html">File Save</a></li>
+    <li><a target="main" href="menus_view.html">View</a></li>
+    <li><a target="main" href="menus_image.html">Image</a></li>
+    <li><a target="main" href="menus_audio.html">Audio</a></li>
+    <li><a target="main" href="menus_pixel.html">Pixel</a></li>
+    <li><a target="main" href="menus_monitor.html">Monitor</a></li>
+    </ul>
+
     <li><a target="main" href="preferences.html">The Preferences
 Window</a></li>
 
